[gd_scene load_steps=7 format=2]

[ext_resource path="res://ExampleScenes/Chapter_05_GodotPhysics/Example_05_10_SimpleSpringJoint/Example_05_10.gd" type="Script" id=1]
[ext_resource path="res://ExampleScenes/Chapter_05_GodotPhysics/Example_05_10_SimpleSpringJoint/Bob_5_10.gd" type="Script" id=2]
[ext_resource path="res://ExampleScenes/Chapter_05_GodotPhysics/Example_05_10_SimpleSpringJoint/Anchor_5_10.gd" type="Script" id=3]
[ext_resource path="res://ExampleScenes/Chapter_05_GodotPhysics/Example_05_10_SimpleSpringJoint/DampedSpringJoint2D.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="Example_5_10_SimpleSpring" type="Node2D"]
script = ExtResource( 1 )

[node name="Anchor_5_10" type="StaticBody2D" parent="."]
z_index = 3
input_pickable = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor_5_10"]
shape = SubResource( 1 )

[node name="Bob_5_10" type="RigidBody2D" parent="."]
position = Vector2( 0, 75 )
input_pickable = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bob_5_10"]
shape = SubResource( 2 )

[node name="Spring_5_10" type="DampedSpringJoint2D" parent="."]
node_a = NodePath("../Anchor_5_10")
node_b = NodePath("../Bob_5_10")
stiffness = 64.0
damping = 0.01
script = ExtResource( 4 )
[connection signal="mouse_entered" from="Anchor_5_10" to="Anchor_5_10" method="_on_Anchor_5_10_mouse_entered"]
[connection signal="mouse_exited" from="Anchor_5_10" to="Anchor_5_10" method="_on_Anchor_5_10_mouse_exited"]
[connection signal="mouse_entered" from="Bob_5_10" to="Bob_5_10" method="_on_Bob_5_10_mouse_entered"]
[connection signal="mouse_exited" from="Bob_5_10" to="Bob_5_10" method="_on_Bob_5_10_mouse_exited"]
